Updated swagger documentations
